# mcp-gateway-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  compose.yaml  pyproject.toml
backend/: __init__.py
backend/agent/: models.py  ports.py  service.py
backend/api/: app.py  dependencies.py  mappers.py
backend/auth/: context.py  dependencies.py  models.py  passwords.py  rbac.py  service.py  tokens.py
backend/cache/: __init__.py  contracts.py  keys.py  policy.py  ports.py  redis.py  serialization.py
backend/diagnostics/: __init__.py  admin_status.py  contracts.py  readiness.py
backend/guardrails/: __init__.py  output.py  policy.py
backend/mcp_gateway/: __init__.py  client.py  contracts.py  knowledge.py  models.py  registry.py  sdk_adapter.py  server.py  transport.py
backend/observability/: __init__.py  context.py  logging.py  maintenance.py  middleware.py
backend/retrieval/: __init__.py  (+10 more)
docs/: LOCAL_RUNBOOK.md  PROJECT_REQUIREMENTS.md
evals/: README.md  __init__.py  contracts.py  loader.py  runner.py  scoring.py
frontend/: __init__.py  app.py
integrations/: __init__.py
scripts/: README.md  bootstrap_local_state.py  doctor_local_runtime.py  reset_local_state.py  run_agent_evaluation.py  seed_demo_data.py  verify_anthropic_planner.py  verify_batch6_closure.py  verify_batch7_delivery.py  verify_delivery.py  verify_knowledge_ingestion.py  verify_local_e2e.py  verify_mcp_transport.py  verify_round4_ingestion.py  verify_round5_persistence.py  verify_round5_refresh.py  verify_round6_mcp_retrieval.py  verify_round7_workflow.py  verify_round8_evidence_layer.py
tests/: conftest.py
(+246 files in other folders)
