[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway-agents"
version = "0.1.0"
description = "MCP gateway plus agentic crypto risk platform skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "langchain>=0.3,<1.0",
  "langchain-anthropic>=0.2,<1.0",
  "pydantic>=2.7,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "streamlit>=1.38,<2.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*", "frontend*", "integrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
